// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` camera mapping test  works as planned:  after Closing pop up  1`] = `
Array [
  <li
    className="flex verticalCenter"
    onClick={[Function]}
    style={
      Object {
        "maxWidth": 130,
        "width": 130,
      }
    }
  >
    <div
      className="Icon"
    >
      {
  "fa": "camera"
}
    </div>
    <span>
      Camera#2
    </span>
  </li>,
  <div
    className="Popup"
  >
    {
  "opened": false,
  "animate": false
}
    <div
      className="BlockTitle"
    >
      {}
      Choose a camera
    </div>
    <div
      className="List"
    >
      {}
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#1
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#2
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#3
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[` camera mapping test  works as planned:  after Fetching cameras  1`] = `
Array [
  <li
    className="flex verticalCenter"
    onClick={[Function]}
    style={
      Object {
        "maxWidth": 130,
        "width": 130,
      }
    }
  >
    <div
      className="Icon"
    >
      {
  "fa": "camera"
}
    </div>
    <span>
      Camera#2
    </span>
  </li>,
  <div
    className="Popup"
  >
    {
  "opened": false,
  "animate": false
}
    <div
      className="BlockTitle"
    >
      {}
      Choose a camera
    </div>
    <div
      className="List"
    >
      {}
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#1
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#2
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#3
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[` camera mapping test  works as planned:  after Opening pop up  1`] = `
Array [
  <li
    className="flex verticalCenter"
    onClick={[Function]}
    style={
      Object {
        "maxWidth": 130,
        "width": 130,
      }
    }
  >
    <div
      className="Icon"
    >
      {
  "fa": "camera"
}
    </div>
    <span>
      Camera#2
    </span>
  </li>,
  <div
    className="Popup"
  >
    {
  "opened": true,
  "animate": false
}
    <div
      className="BlockTitle"
    >
      {}
      Choose a camera
    </div>
    <div
      className="List"
    >
      {}
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#1
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#2
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span>
            Camera#3
          </span>
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[` camera mapping test  works as planned:  after Setting Camera  1`] = `
Array [
  <li
    className="flex verticalCenter"
    onClick={[Function]}
    style={
      Object {
        "maxWidth": 130,
        "width": 130,
      }
    }
  >
    <div
      className="Icon"
    >
      {
  "fa": "camera"
}
    </div>
    <span>
      Select Camera
    </span>
  </li>,
  <div
    className="Popup"
  >
    {
  "opened": false,
  "animate": false
}
    <div
      className="BlockTitle"
    >
      {}
      Choose a camera
    </div>
    <div
      className="List"
    >
      {}
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span />
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span />
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span />
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[` camera mapping test  works as planned:  after preparing cameras  1`] = `
Array [
  <li
    className="flex verticalCenter"
    onClick={[Function]}
    style={
      Object {
        "maxWidth": 130,
        "width": 130,
      }
    }
  >
    <div
      className="Icon"
    >
      {
  "fa": "camera"
}
    </div>
    <span>
      Select Camera
    </span>
  </li>,
  <div
    className="Popup"
  >
    {
  "opened": false,
  "animate": false
}
    <div
      className="BlockTitle"
    >
      {}
      Choose a camera
    </div>
    <div
      className="List"
    >
      {}
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span />
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span />
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
      <div
        className="ListItem"
      >
        {}
        <div
          slot="title"
        >
          <span />
           - 
        </div>
        <div
          slot="inner"
        >
          <div
            className="Icon"
          >
            {
  "fa": "chevron"
}
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[` camera mapping test  works as planned: Before anything 1`] = `
Array [
  <li
    className="flex verticalCenter"
    onClick={[Function]}
    style={
      Object {
        "maxWidth": 130,
        "width": 130,
      }
    }
  >
    <div
      className="Icon"
    >
      {
  "fa": "camera"
}
    </div>
    <span>
      Select Camera
    </span>
  </li>,
  <div
    className="Popup"
  >
    {
  "opened": false,
  "animate": false
}
    <div
      className="BlockTitle"
    >
      {}
      Choose a camera
    </div>
    <div
      className="List"
    >
      {}
    </div>
  </div>,
]
`;
